--- a/cog_bibliography.bib
+++ b/cog_bibliography.bib
@@ -1,3 +1,10 @@
+@InProceedings{antol2015, 
+	author = {Stanislaw Antol and Aishwarya Agrawal and Jiasen Lu and Margaret Mitchell and Dhruv Batra and C. Lawrence Zitnick and Devi Parikh}, 
+	title = {{VQA}: {V}isual {Q}uestion {A}nswering}, 
+	booktitle = {International Conference on Computer Vision (ICCV)}, 
+	year = {2015}, 
+}
+
 @InProceedings{haurilet2019s,
   author    = {Haurilet, Monica and Roitberg, Alina and Stiefelhagen, Rainer},
   title     = {It's Not About the Journey; It's About the Destination: Following Soft Paths Under Question-Guidance for Visual Reasoning},
