--- a/2019_neurips_vigil/appendix_model.tex
+++ b/2019_neurips_vigil/appendix_model.tex
@@ -467,75 +467,54 @@ As we can see in Table 2 we could achieve a 12\% improvement for the canonical d
 The large improvement in these memory-intensive tasks indicate that the SAMNet's external memory plays a crucial role in our results. 
 The training and implementation details are in appendix.
 
-
-
-
-
-
-
-
 \begin{table}[t]
-	\tiny
+\caption{COG test set accuracies for SAMNet \& COG models. Below `paper' denotes results from~\cite{yang2018dataset} 
+	while `code' denotes results of our experiments using their implementation~\cite{yang2018implement}}
+\resizebox{\textwidth}{!}{
+\centering
+\begin{tabular}{ccccccccccc}
+	\toprule
+	Model & & SAMNet & && && COG&& \\
+	\cmidrule{2-5} \cmidrule{7-11} 
+	&&&&& & paper & ours & ours & paper&\\
+	\cmidrule{7-9} \cmidrule{10-11}
+	Trained on       & canonical & canonical & canonical & hard &           &  canonical  & canonical  & canonical & hard \\ 
+	Fine tuned on  & - & - & hard  & - &           & -   & - & hard & - \\ 
+	Tested on        & canonical & hard & hard & hard &            &canonical  & hard & hard & hard  \\ 
+	\midrule
 	
-	\caption{COG test set accuracies for  SAMNet \& COG models. For the COG section, the results marked as 'paper' comes from the original COG paper ~\cite{yang2018dataset}, whereas the results marked as 'ours' come from our own experiments using the following implementation: https://github.com/google/cog }
+	Overall accuracy & 98.0 & 91.6 & 96.5  & 96.1 &           & 97.6  & 65.9 & 78.1& 80.1 \\ 
 	
-	\resizebox{\textwidth}{!}{
-		\centering
-		\begin{tabular}{ccccccccccc}
-			\toprule
-			Model & & SAMNet & && && COG&& \\
-			\cmidrule{2-5} \cmidrule{7-11} 
-			&&&&& & paper & ours & ours & paper&\\
-			\cmidrule{7-9} \cmidrule{10-11}
-			Trained on       & canonical & canonical & canonical & hard &           &  canonical  & canonical  & canonical & hard \\ 
-			Fine tuned on  & - & - & hard  & - &           & -   & - & hard & - \\ 
-			Tested on        & canonical & hard & hard & hard &            &canonical  & hard & hard & hard  \\ 
-			\midrule
+	\midrule 
 			
-			Overall accuracy & 98.0 & 91.6 & 96.5  & running &           & 97.6  & 65.9 & 78.1& 80.1 \\ 
-			
-			\midrule 
-			
-			
-			AndCompareColor	&	93.5		&	82.7	&	89.2	&&		&81.9	&57.1& 60.7&	51.4
-			\\ 
-			AndCompareShape	&	93.2 		&	83.7	&	89.7	&&	&	80.0	&53.1	&50.3&50.7\\ 
-			AndSimpleCompareColor	&	99.2	&		85.3	&	97.6	&	&	&99.7&	53.4&77.1&	78.2\\ 
-			AndSimpleCompareShape	&	99.2&			85.8	&	97.6	&&	&	100.0	&56.7&79.3&	77.9\\ 
-			CompareColor	&	98.1		&	89.3	&	95.9	&&		&99.2&	56.1&67.9&	50.1\\ 
-			CompareShape	&	98.0	&		89.7	&	95.9	&&	&99.4	&66.8	&65.4&50.5
-			\\ 
-			Exist	&	100.0	&		99.7	&	99.8		&&	&	100.0&	63.5&96.1&	99.3\\ 
-			ExistColor	&	100.0		&	99.6	&	99.9	&&	&	99.0&	70.9&99&	89.8\\ 
-			ExistColorOf	&	99.9	&		95.5	&	99.7		& & &	99.7&	51.5&76.1&	73.1\\ 
-			ExistColorSpace	&94.1		&	88.8	&	91.0	&& &	98.9	&72.8	&77.3&89.2\\ 
-			ExistLastColorSameShape	&	99.5		&	99.4	&99.4	&&		&100.0	&65.0&62.5&	50.4
-			\\ 
-			ExistLastObjectSameObject	&	97.3	&		97.5	&	97.7	&&	&	98.0&	77.5	&61.7&60.2\\ 
-			ExistLastShapeSameColor	&	98.2		&	98.5&	98.8	&&	&	100.0&	87.8&60.4&	50.3\\ 
-			ExistShape	&	100.0	&	99.5	&	100.0	&&&	100.0&	77.1	&98.2&92.5\\ 
-			ExistShapeOf	&	99.4		&	95.9	&	99.2	&&&100.0	&52.7&74.7&72.70\\ 
-			ExistShapeSpace &	93.4		&	87.5	&	91.1	&&&97.7 &70	&89.8&89.80& \\
-			ExistSpace	&	95.3	&	89.7	&	93.2	&&		&	98.9	&71.1	&88.1&92.8\\ 
-			GetColor	&	100.0		&	95.8&	99.9	&& &	100.0&	71.4&83.1&	97.9\\ 
-			GetColorSpace	&	98.0		&	90.0	&	95.0&	& &	98.2	&71.8&73.&	92.3\\ 
-			GetShape	&	100.0		&	97.3&	99.9&	&	&	100.0  &83.5&89.2&	97.1
-			\\ 
-			GetShapeSpace	&	97.5	&	89.4	&	93.9	&&&	98.1  &78.7	&77.3&	90.3\\ 
-			SimpleCompareShape	&	99.9		&	91.4	&	99.7	&	&&	100.0 & 67.7&96.7&	99.3\\ 
-			SimpleCompareColor	&	100.0 		&	91.6  &	99.80&	&	&	100.0&	64.2&90.4&	99.3	  \\ 
-			
-			
-			
-			
-			
-			
-			
-			\bottomrule
-		\end{tabular}
-	}
-	
-	\label{results}
+	AndCompareColor			&	93.5	&	82.7	&	89.2	&	80.6	&	&	81.9	&	57.1	&	60.7	&	51.4	 \\
+	AndCompareShape			&	93.2	&	83.7	&	89.7	&	80.1	&	&	80.0	&	53.1	&	50.3	&	50.7 \\
+	AndSimpleCompareColor		&	99.2	&	85.3	&	97.6	&	99.4	&	&	99.7	&	53.4	&	77.1	&	78.2 \\
+	AndSimpleCompareShape		&	99.2	&	85.8	&	97.6	&	99.2	&	&	100.0	&	56.7	&	79.3	&	77.9 \\
+	CompareColor			&	98.1	&	89.3	&	95.9	&	99.7	&	&	99.2	&	56.1	&	67.9	&	50.1 \\
+	CompareShape			&	98.0	&	89.7	&	95.9	&	99.2	&	&	99.4	&	66.8	&	65.4	&	50.5	 \\
+	Exist				&	100.0	&	99.7	&	99.8	&	99.8	&	&	100.0	&	63.5	&	96.1	&	99.3 \\
+	ExistColor			&	100.0	&	99.6	&	99.9	&	99.9	&	&	99.0	&	70.9	&	99	&	89.8 \\
+	ExistColorOf			&	99.9	&	95.5	&	99.7	&	99.8	&	&	99.7	&	51.5	&	76.1	&	73.1 \\
+	ExistColorSpace			&	94.1	&	88.8	&	91.0	&	90.8	&	&	98.9	&	72.8	&	77.3	&	89.2 \\
+	ExistLastColorSameShape		&	99.5	&	99.4	&	99.4	&	98.0	&	&	100.0	&	65.0	&	62.5	&	50.4 \\
+	ExistLastObjectSameObject	&	97.3	&	97.5	&	97.7	&	97.5	&	&	98.0	&	77.5	&	61.7	&	60.2 \\
+	ExistLastShapeSameColor		&	98.2	&	98.5	&	98.8	&	97.5	&	&	100.0	&	87.8	&	60.4	&	50.3 \\
+	ExistShape			&	100.0	&	99.5	&	100.0	&	100.0	&	&	100.0	&	77.1	&	98.2	&	92.5 \\
+	ExistShapeOf			&	99.4	&	95.9	&	99.2	&	99.2	&	&	100.0	&	52.7	&	74.7	&	72.70 \\
+	ExistShapeSpace			&	93.4	&	87.5	&	91.1	&	90.5	&	&	97.7	&	70	&	89.8	&	89.80 \\
+	ExistSpace			&	95.3	&	89.7	&	93.2	&	93.3	&	&	98.9	&	71.1	&	88.1	&	92.8 \\
+	GetColor			&	100.0	&	95.8	&	99.9	&	100.0	&	&	100.0	&	71.4	&	83.1	&	97.9 \\
+	GetColorSpace			&	98.0	&	90.0	&	95.0	&	95.4	&	&	98.2	&	71.8	&	73.	&	92.3 \\
+	GetShape			&	100.0	&	97.3	&	99.9	&	99.9	&	&	100.0	&	83.5	&	89.2	&	97.1	 \\
+	GetShapeSpace			&	97.5	&	89.4	&	93.9	&	94.3	&	&	98.1	&	78.7	&	77.3	&	90.3 \\
+	SimpleCompareShape		&	99.9	&	91.4	&	99.7	&	99.9	&	&	100.0	&	67.7	&	96.7	&	99.3 \\
+	SimpleCompareColor		&	100.0	&	91.6	&	99.80	&	99.9	&	&	100.0	&	64.2	&	90.4	&	99.3 \\
+	\bottomrule
+\end{tabular}
+}
+
+\label{results}
 \end{table}
 
 
