progress on experiments - images with performance

--- a/2019_neurips_vigil/experiments.tex
+++ b/2019_neurips_vigil/experiments.tex
@@ -39,6 +39,20 @@ We argue that the generalization capability of SAMNet is mainly due to the dynam
 \label{tab:results}
 \end{table}
 
+\begin{figure}
+	\centering
+  \begin{subfigure}{\textwidth}
+    \includegraphics[width=0.99\textwidth]{results/samnet_cog_orig_canonical_no_labels.png}
+  \end{subfigure}%
+  \newline
+  \begin{subfigure}{\textwidth}
+	\includegraphics[width=\textwidth]{results/samnet_cog_orig_hard.png}
+  \end{subfigure}%
+\caption{Comparison of performances of SAMNet (blue) with original results achieved by the COG model (gray) on Canonical (top) and Hard (bottom) variants of the COG dataset.}
+\label{fig:samnet}
+\end{figure}
+
+
 
 \begin{figure}
 	\centering
