--- a/cog_bibliography.bib
+++ b/cog_bibliography.bib
@@ -1,3 +1,4 @@
+% Encoding: UTF-8
 @InProceedings{antol2015, 
 	author = {Stanislaw Antol and Aishwarya Agrawal and Jiasen Lu and Margaret Mitchell and Dhruv Batra and C. Lawrence Zitnick and Devi Parikh}, 
 	title = {{VQA}: {V}isual {Q}uestion {A}nswering}, 
@@ -199,6 +200,12 @@
   author={Harnad, Stevan},
   year={2003},
   publisher={Nature Publishing Group: Macmillan}
+}
+
+@Article{paszke2017automatic,
+  author = {Paszke, Adam and Gross, Sam and Chintala, Soumith and Chanan, Gregory and Yang, Edward and DeVito, Zachary and Lin, Zeming and Desmaison, Alban and Antiga, Luca and Lerer, Adam},
+  title  = {Automatic differentiation in {PyTorch}},
+  year   = {2017},
 }
 
 @Comment{jabref-meta: databaseType:bibtex;}
