--- a/2019_neurips_vigil/experiments.tex
+++ b/2019_neurips_vigil/experiments.tex
@@ -1,9 +1,9 @@
 \section{Experiments}
 
 We evaluated SAMNet on the COG dataset~\cite{yang2018dataset}.
-Our experiments were intended to study SAMNet's performance as well as generalization abilities in different settings.
+Our experiments were designed to study SAMNet's performance as well as its generalization abilities in different settings.
 For this purpose, we used two different variants of the COG dataset: an easy one (Canonical) and a Hard version to explore a wide range of difficulties.
-The main differences are: the number of frames in the input sequence (4 vs 8) and the maximum number of distractors (i.e. objects not important from the point of view of the answer) per frame (1 vs 10).
+The main differences are the number of frames in the input sequence (4 vs. 8) and the maximum number of distractors (i.e., objects not relevant for the answer) per frame (1 vs. 10).
 %More details on the dataset, its variants and tasks can be found in the Appendix.
 
 
@@ -34,21 +34,21 @@ The main differences are: the number of frames in the input sequence (4 vs 8) an
 \end{wrapfigure}
 
 We have implemented and trained our SAMNet model using MI-Prometheus~\cite{kornuta2018accelerating}, a framework based on Pytorch~\cite{paszke2017automatic}. 
-In our experiments we have focused on 22 classification tasks and compared our results with the baseline model, as presented in \cref{fig:samnet_cog_detailed}.
-For the Canonical variant (top row), we have achieved similar accuracies for majority of tasks (with the total average accuracy of 98.0\% in comparison of 97.6\% achieved by the COG model), with big improvements (around 13 points) for \textit{AndCompare} tasks.
+In our experiments, we have focused on 22 classification tasks and compared our results with the baseline model, as presented in \cref{fig:samnet_cog_detailed}.
+For the Canonical variant (top row), we have achieved similar accuracies for the majority of tasks (with the total average accuracy of 98.0\% in comparison of 97.6\% achieved by the COG model), with significant improvements (around 13 points) for \textit{AndCompare} tasks.
 As those tasks focus on compositional questions referring to two objects, we hypothesize that our model achieved better accuracy due to the ability to selectively pick and store the relevant objects from the past frames in the memory.
 Despite there are some tasks in which our model reached slightly lower accuracies,
 % (between 0.2 and 1.8 points)
-when comparing performances on the Hard variant, it clearly dominates COG baseline on all tasks, with improvements varying from 0.5 to more than 30 points.
+when comparing performances on the Hard variant, it dominates COG baseline on all tasks, with improvements varying from 0.5 to more than 30 points.
 
-The goal of the next set of experiments was to test the generalization ability when it comes to both length of sequence and number of distractors.
-For that purpose we have compared the accuracies of both models when trained on the Canonical variant and tested on Hard (\cref{fig:samnet_cog_overall_transfer}).
-As the original paper haven't included such experiments, we have performed them on our own---light gray color indicates the original results, whereas dark gray indicates the accuracies of COG models that we have achieved by training (finetuning/testing) them on our own using the original code provided by the authors.
-For sanity check, in the first column we report both best achieved score and the score reported in the paper when training and testing on Canonical variant, without any fine-tuning (N/A in the second row from the bottom).
-In a pure \textit{transfer learning} setup (second column), our model shows enormous generalization ability, reaching 91.6\% accuracy on test set.
-We have also tested both models in a setup where model trained on a Canonical variant underwent additional fine-tuning (for a single epoch) on Hard variant (third column).
-In this case, the SAMNet model also reached much better performance, and, interestingly, achieved better scores from the model trained and tested on exclusively on Hard variant.
-Summarizing, the achieved results clearly indicate that the mechanisms introduced in SAMNet  enable it to learn to operate independently of the total number of frames or number of distractions, and allow it to generalize to longer videos and more complex scenes.
+The goal of the next set of experiments was to test the generalization ability concerning the sequence length and number of distractors.
+For that purpose, we have compared the accuracies of both models when trained on the Canonical variant and tested on Hard (\cref{fig:samnet_cog_overall_transfer}).
+As the original paper does not include such experiments, we have performed them on our own.  The light gray color indicates the original results, whereas dark gray indicates the accuracies of COG models that we have trained (fine-tuning/testing) using the original code provided by the authors.
+For sanity check, in the first column, we report both the best-achieved score and the score reported in the paper when training and testing on Canonical variant, without any fine-tuning (N/A in the second row from the bottom).
+In a pure \textit{transfer learning} setup (second column), our model shows enormous generalization ability, reaching 91.6\% accuracy on the test set.
+We have also tested both models in a setup where the model trained on a Canonical variant underwent additional fine-tuning (for a single epoch) on the Hard variant (third column).
+In this case, the SAMNet model also reached much better performance, and, interestingly, achieved better scores from the model trained and tested exclusively on the Hard variant.
+In summary, the results clearly indicate that the mechanisms introduced in SAMNet  enable it to learn to operate independently of the total number of frames or number of distractions, and allow it to generalize to longer videos and more complex scenes.
 
 %we used the canonical (easy) and hard settings that alter the number of distractors and sequence length.  Since there was no baseline for these tests (train on canonical, test on hard), we ran our own experiments using the COG model provided by the authors.  SAMNet achieves the highest overall scores for all categories of experiments (\cref{fig:samnet_cog_overall_transfer}), especially for the tests run on the hard dataset.  Among the 22 classification tasks, we highlighted the two most difficult tasks that affect the overall score. 
 %We argue that the generalization capability of SAMNet is mainly due to the dynamic frame-by-frame processing of the input sequence. 
